# config_manager

./: pyproject.toml
src/config_manager/: __init__.py
